<resources>
    <string name="app_name">Phase1Challenge</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="ALC">About ALC</string>
    <string name="profile">MY PROFILE</string>
    <string name="track">Track : Android</string>
    <string name="name">Name: Julius Mutunga Ntheketha</string>
    <string name="email">Email: julius.ntheketha@riarauniversity.ac.ke</string>
    <string name="phone">Phone Number: 254708094353</string>
    <string name="slackusername">Slack Username: \@recu55ive</string>
    <string name="country">Country: Kenya</string>
</resources>
