<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/julreduced"
        android:contentDescription="@string/welcome"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/tv_track"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|start"
        android:text="@string/track"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_country"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        android:text="@string/country"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_track" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/email"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        app:layout_constraintBottom_toTopOf="@+id/tv_phonenumber"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_country" />

    <TextView
        android:id="@+id/tv_phonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        android:text="@string/phone"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvslack_user"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tvslack_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/slackusername"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_phonenumber" />
</android.support.constraint.ConstraintLayout>