<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textSize="41sp"
        android:fontFamily="@font/hansonfy"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bt_ALC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_ALC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_marginStart="24dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ALC"
        android:ems="6"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        android:textSize="30sp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toTopOf="@+id/bt_myprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <Button
        android:id="@+id/bt_myprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        android:fontFamily="@font/hansonfy"
        android:onClick="onClick"
        android:text="@string/profile"
        android:textSize="30sp"
        android:ems="7"
        android:background="@drawable/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_ALC" />
</android.support.constraint.ConstraintLayout>